work section header alignment, height and card order fixed

--- a/styles/03-base/_base.scss
+++ b/styles/03-base/_base.scss
@@ -2,6 +2,7 @@
 
 html {
   scroll-behavior: smoothing;
+  scroll-padding: 2em;
 }
 
 li {
